--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -24,3 +24,13 @@ flutter:
 
   assets:
     - .env
+
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Thin.ttf
+          weight: 100
+        - asset: assets/fonts/Roboto-Regular.ttf
+          weight: 400
+        - asset: assets/fonts/Roboto-Bold.ttf
+          weight: 700
